<?xml version="1.0"?>
<package format="2">
  <name>zr_hw_info</name>
  <version>0.0.1</version>
  <description>The zr_hw_info package</description>

  <maintainer email="278667286@qq.com">ZZZ</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/zaizhizhuang</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zr_protocol</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>zr_protocol</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>zr_protocol</exec_depend>
  
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export></export>

</package>
